# gl_renderer

./: .gitignore
lib/: CMakeLists.txt
lib/input/: CMakeLists.txt
lib/input/include/input/: action.hpp  input.hpp  key_state.hpp  keycode.hpp  scancode.hpp
lib/input/src/: input.cpp  keycode.cpp
lib/renderer/: CMakeLists.txt
lib/renderer/include/renderer/: camera.hpp  convert.hpp  file.hpp  gl_loader.hpp  int.hpp  logger.hpp  material.hpp  matrix.hpp  object_data.hpp  object_properties.hpp  primitive.hpp  renderer.hpp  settings.hpp  shader.hpp  shader_stage.hpp  shader_type.hpp  texture.hpp  transform.hpp  types.hpp  uint.hpp  vector.hpp  vertex.hpp
lib/renderer/include/renderer/api/: gl_loader.hpp
lib/renderer/include/renderer/core/: camera.hpp  logger.hpp  material.hpp  renderer.hpp  shader.hpp  shader_stage.hpp  texture.hpp  transform.hpp  vertex.hpp
lib/renderer/include/renderer/object/: object_data.hpp  object_properties.hpp  primitive.hpp
lib/renderer/include/renderer/scene/: file.hpp
lib/renderer/include/renderer/settings/: renderer_settings.hpp  scene_settings.hpp
lib/renderer/include/renderer/types/: float.hpp  int.hpp  matrix.hpp  uint.hpp  vec.hpp
lib/renderer/include/renderer/util/: convert.hpp  errors.hpp
lib/renderer/src/: convert.cpp  file.cpp  gl_loader.cpp  logger.cpp  renderer.cpp  shader.cpp  transform.cpp
lib/window/: CMakeLists.txt
lib/window/include/window/: win32.hpp  win32_window.hpp  window.hpp
lib/window/src/: win32_window.cpp
samples/: CMakeLists.txt
samples/camera/: CMakeLists.txt  camera.cpp
samples/camera/shaders/: camera.vert
samples/cube/: CMakeLists.txt  cube.cpp
samples/quad/: CMakeLists.txt  quad.cpp
samples/triangle/: CMakeLists.txt  triangle.cpp  triangle.yaml
shaders/: flat_shading.vert  triangle.frag  triangle.vert
